Fix minicpbp compilation.